# llm-utils

./: .gitignore  [MCP]ChatBot.ipynb  [MCP]SearchPaper.ipynb  mlflow.ipynb
ActivationEdits/: activation_edit.py  code_examples.py  general_examples.py
ActivationEdits/config/: coding.yaml  diff_coding.yaml  general.yaml  reduced_error.yaml  unsafe.yaml
LoRA/: config.yaml  create_dataset.py  gpu_management.ipynb  inference.py  lora.ipynb  lora.py  qwen2-1.5B-arch  utils.py
mcp_project/: mcp_chatbot.py  pyproject.toml  research_server.py
