[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "arxiv>=2.3.1",
    "fastmcp>=2.14.1",
    "langchain-openai>=1.1.6",
    "mcp>=1.25.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.14.0",
]
